changes to projects section

--- a/index.html
+++ b/index.html
@@ -250,7 +250,9 @@
           <p>Short summary...</p>
         </div>
       </div>
-    </div><br>
+    </div>
+</div>  
+    <br>
         <br>
 
         <hr>
@@ -299,21 +301,19 @@
         </section>-->
 <br>
 <div class="container">
-
-</div>
-        <div id="contact" class="container">
-            <h3 class="text-center">Contact</h3>
-            <p class="text-center"><em>Leave me a message!</em></p>
+        <div id="contact" class="container bg-dark">
+            <h3 class="text-center fw-bolder display-3 text-white">Contact</h3>
+            <p class="text-center text-white display-4"><em>Leave me a message!</em></p>
 
             <div class="row">
-                <div class="col-md-4">
-                    <p><span class="glyphicon glyphicon-map-marker"></span>Cincinnati, Ohio, US</p>
-                    <p><span class="glyphicon glyphicon-phone"></span>Phone:</p>
-                    <p><span class="glyphicon glyphicon-envelope"></span>Email: oliverjarjosa@gmail.com</p>
+                <div class="col-md-4 bg-dark">
+                    <p class="text-white fw-bolder"><span class="glyphicon glyphicon-map-marker"></span>Cincinnati, Ohio, US</p>
+                    <p class="text-white fw-bolder"><span class="glyphicon glyphicon-phone"></span>Phone:</p>
+                    <p class="text-white fw-bolder"><span class="glyphicon glyphicon-envelope"></span>Email: oliverjarjosa@gmail.com</p>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8 bg-dark">
                     <div class="row">
-                        <div class="col-sm-6 form-group">
+                        <div class="col-sm-6 form-group bg-dark">
                             <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
                         </div>
                         <div class="col-sm-6 form-group">
