last changes for 1-23

--- a/index.html
+++ b/index.html
@@ -89,11 +89,10 @@
 
                                 <p class="display-6 text-black">Entry level front-end developer</p>
                                 <ul id="about-list" class="fw-bold text-black">
-                                    <li>Strong foundation in HTML, CSS, and Bootstrap</li>
-                                    <li>Certification of Web Development from Kable Academy </li>
-                                    <li>Passion for learning and developing new skills to broaden my </li>learn and
-                                    adapt to new tools and frameworks as the
-                                    industry evolves.</li>
+                                    <li>Strong foundation in CSS, Javascript & Bootstrap</li>
+                                    <li>(Will receive)Certification of Web Development from Kable Academy </li>
+                                    <li>Passion for learning and applying the skills acquired along the way.</li>
+                                    <li>Creative, problem-solver, and keen attention to detail.</li>
                                 </ul>
 
                                 <a href="#!" class="btn bsb-btn-3xl btn-primary rounded-pill">Read more</a>
