updates to layout

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+      <!-- Font Awesome icons (free version)-->
+      <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+      <!-- Google fonts-->
+      <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+      <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
     <title>Portfolio</title>
     <!-- Favicon-->
     <link rel="icon" type="" href="" />
@@ -31,8 +36,9 @@
             </div>
         </div>
     </nav>
-
-    <!-- side nav 
+<!-- Image -->
+<img src="" alt="" type="thumbnail">
+    <!-- side nav
 
     <header>
         <div class="row">
@@ -57,25 +63,9 @@
             </div>
         </div>
     </header>-->
-    <!-- Page Content-->
-    <!-- site banner 
 
-<section class="site-banner" id="home">
-    <div class="banner-area">
-        <div class="author text-center">
-            <div class="author-img"></div>
-            <h1 class="text-white font-staat font-size-40 text-uppercase py-3">Akshay Kashyap</h1>
-        </div>
-    </div>
-</section>
              <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-6">
-                    <div class="card col-lg-6">
-                        <h1 class="mt-5 text-uppercase text-dark">Welcome</h1>
-                        <h5 class="mt-5"><p></p></h5>
-                    </div>
-                </div>
-            </div> -->
+            </div>
     <!-- Cards -->
     <main>
         <div class="container">
@@ -83,22 +73,22 @@
                 <div class=" px-3 py-3">
                     <section class="py-3 py-xl-8 px-3">
                         <div class="container">
-                            <div class="card">
+                            <div id="#About" class="card bg-light">
                                 <h3 class="fs-6 text-secondary mb-3 mb-xl-4 text-uppercase text-black">About
                                 </h3>
 
                                 <p class="display-6 text-black">Entry level front-end developer</p>
-                                <ul id="about-list" class="fw-bold text-black">
+                                <ul id="about-list" class="text-black">
                                     <li>Strong foundation in CSS, Javascript & Bootstrap</li>
                                     <li>(Will receive)Certification of Web Development from Kable Academy </li>
                                     <li>Passion for learning and applying the skills acquired along the way.</li>
                                     <li>Creative, problem-solver, and keen attention to detail.</li>
                                 </ul>
 
-                                <a href="#!" class="btn bsb-btn-3xl btn-primary rounded-pill">Read more</a>
+                                <a href="#!" class="btn bsb-btn-3xl btn-primary rounded-pill mb-2 mx-2">Read more</a>
                             </div>
                         </div>
-
+<!--Work & Education Sections-->
                         <div id="work-section">
                             <div class="card border-0 border-bottom border-primary shadow-sm">
                                 <div class="card-body p-4 p-xxl-5 bg-light">
@@ -109,29 +99,53 @@
                                             src="../startbootstrap-the-big-picture-gh-pages/proscanImagingExcellenceLogo.png"
                                             alt="Logo for ProScan Imaging">
                                         <div class="panel panel-default bg-light">
-                                            <div class="panel-heading">Panel Header</div>
-                                            <div class="panel-body">Panel Content</div>
+                                            <div class="panel-heading">May 2023 - Current</div>
+                                            <div class="panel-body"><ul>
+                                                <li>Accurately entered data and corrected any information that was out of date.</li>
+                                                <li>Communicated with clients to ensure that all information was received in a timely manner.</li>
+                                                <li>Securely handled confidential patient data and insurance information.</li>
+                                                <li>Organized written correspondence to request relevant patient details before processing the cases.</li>
+                                                <li>Conveyed attention to detail and proficiency in utilizing ERP software.</li>
+                                            </ul></div>
 
-                                            <p class="text-white"></p>
-                                            <p class="text-white"></p>
+                                            <br>
+                                            <hr>
+                                            <br>
 
                                             <h3>Blueboard Inc.</h3>
                                             <img id="blueboard-logo"
                                                 src="../startbootstrap-the-big-picture-gh-pages/639ce07b66f416168ceaee73_BBApproach_Gloji.webp"
                                                 alt="">
                                             <div class="panel panel-default bg-light">
-                                                <div class="panel-heading">Panel Header</div>
-                                                <div class="panel-body">Panel Content</div>
-                                                <p class="text-white"></p>
-                                                <p class="text-white"></p>
+                                                <div class="panel-heading">May 2023 - Current</div>
+                                            <div class="panel-body"><ul>
+                                                <li>Provided customers with best deals and well-researched travel options.</li>
+                                                <li>Maintained operational proficiency in coordinating both international and domestic travel accommodations for customers, arranging for airfare as well as hotel and rental car reservations.</li>
+                                                <li>Collaborated with colleagues to implement best practices across department and exceed team goals.</li>
+                                                <li>Organized memorable and exquisite travel itineraries and vacations for high-level clients and business partners.</li>
+                                            
+                                            </ul></div>
+
+                                            <br>
+                                            <hr>
+                                            <br>
+
+
+
 
                                                 <h3>Fidelity Investments</h3>
                                                 <img id="fidelity-logo"
                                                     src="../startbootstrap-the-big-picture-gh-pages/fidelity-investments-logo-3.png"
                                                     alt="">
                                                 <div class="panel panel-default bg-light">
-                                                    <div class="panel-heading">Panel Header</div>
-                                                    <div class="panel-body">Panel Content</div>
+                                                    <div class="panel-heading">May 2023 - Current</div>
+                                                    <div class="panel-body"><ul>
+                                                        <li>Accurately entered data and corrected any information that was out of date.</li>
+                                                        <li>Communicated with clients to ensure that all information was received in a timely manner.</li>
+                                                        <li>Securely handled confidential patient data and insurance information.</li>
+                                                        <li>Organized written correspondence to request relevant patient details before processing the cases.</li>
+                                                        <li>Conveyed attention to detail and proficiency in utilizing ERP software.</li>
+                                                    </ul></div>
                                                 </div>
 
                                     </ul>
@@ -152,20 +166,29 @@
                                         <img id="uc-logo"
                                             src="../startbootstrap-the-big-picture-gh-pages/Cincinnati-Bearcats-Logo.png"
                                             alt="">
-                                        <p><i>2019 - 2021</i></p>
-                                        </li>
-                                        <p>Graduated with a Bachelor's of Psychology</p>
-                                    </ul>
-                                    <li>
-                                        <h6>Oldfields School</h6>
-                                        <p><i>2013 - 2016</i></p>
+                                            <div class="panel-heading">May 2023 - Current</div>
+                                            <div class="panel-body"><ul>
+                                                <li>Accurately entered data and corrected any information that was out of date.</li>
+                                                <li>Communicated with clients to ensure that all information was received in a timely manner.</li>
+                                                <li>Securely handled confidential patient data and insurance information.</li>
+                                                <li>Organized written correspondence to request relevant patient details before processing the cases.</li>
+                                                <li>Conveyed attention to detail and proficiency in utilizing ERP software.</li>
+                                            </ul></div>
+                                            <br>
+                                            <hr>
+                                            <br>
+                                        <h4>Oldfields School</h4>
                                         <img id="os-logo" src="../startbootstrap-the-big-picture-gh-pages/os-logo.jpg"
                                             alt="Oldfields School logo">
-                                    </li>
-                                    <ul>
-                                        <p>Graduated in 2016 with Honors</p>
-                                    </ul>
-                                    </ul>
+                                            <div class="panel-heading">May 2023 - Current</div>
+                                            <div class="panel-body"><ul>
+                                                <li>Accurately entered data and corrected any information that was out of date.</li>
+                                                <li>Communicated with clients to ensure that all information was received in a timely manner.</li>
+                                                <li>Securely handled confidential patient data and insurance information.</li>
+                                                <li>Organized written correspondence to request relevant patient details before processing the cases.</li>
+                                                <li>Conveyed attention to detail and proficiency in utilizing ERP software.</li>
+                                            </ul></div>
+                                   
                                     <a href="#!" class="fw-bold text-decoration-none link-primary">
                                         Learn More
                                     </a>
@@ -180,7 +203,7 @@
         </div>
         </div>
 
-        <!--Project Cards
+        <!--Project Cards (alternate)
         <div id="project-container" class="container">
             <div class="row m-5 align-items-center justify-content-center flex-column">
                 <div class="">
@@ -223,33 +246,41 @@
             </div>
         </div>-->
 
-        <!-- Container (Portfolio Section) -->
+        <!-- Container (Main Portfolio Section) -->
 <div id="portfolio" class="container-fluid text-center bg-light">
     <h2 class="mx-4 py-4">Portfolio</h2><br>
 
-    <div class="row text-center slideanim">
+    <div class="row text-center align-items-center justify-content-center">
       <div class="col-sm-4">
         <div class="thumbnail">
           <img src="../startbootstrap-the-big-picture-gh-pages/me-and-jelly.png" alt="A preview of our About Me project." width="200" height="200">
           <p><strong>About Me</strong></p>
-          <p>Short summary...</p>
+          <p>'About Me' was the first project assigned in our Web Development course. This project consists primarily of HTML and a few lines of CSS completed within the HTML document.</p>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
           <img src="../startbootstrap-the-big-picture-gh-pages/mad-libs-screenshot.jpg" alt="A preview of our Mad Libs inspired project." width="200" height="200">
           <p><strong>Mad Libs</strong></p>
-          <p>short summary...</p>
+          <p>The first portion of this project was to create a form to accept words that will eventually fill out a Mad Libs template. This project used both HTML and a CSS stylesheet.</p>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
           <img src="../startbootstrap-the-big-picture-gh-pages/product-landing-project.png" alt="A preview of our Product Landing Page project." width="200" height="200">
           <p><strong>Product Landing Page</strong></p>
-          <p>Short summary...</p>
+          <p>This project consisted of creating a landing page for a specific product. My page presented home remodeling and interior design. In this project, HTML, CSS & Bootstrap were combined to create an inviting and professional layout.</p>
         </div>
       </div>
     </div>
+
+    <div id="drumb-kit" class="justify-content-center align-items-center col-lg-4">
+        <div class="thumbnail">
+          <img src="./Retro-Drumb-Kit.png" alt="A preview of our JavaScript Drumb Kit project." width="200" height="200">
+          <p><strong>JavaScript Drumb Kit</strong></p>
+          <p class="pb-4">In this project, we focused on establishing a connection between the buttons on the keyboard and the labeled buttons on the screen. With the use of JavaScript, Bootstrap, HTML & CSS, we customized the drumb kit changing the sounds and visual aspects of the page.</p>
+        </div>
+      </div>
 </div>  
     <br>
         <br>
@@ -301,21 +332,23 @@
 <br>
 <div class="container">
         <div id="contact" class="container bg-dark">
-            <h3 class="text-center fw-bolder display-3 text-white">Contact</h3>
-            <p class="text-center text-white display-4"><em>Leave me a message!</em></p>
+            <h3 class="text-center fw-bolder text-white py-2">Contact</h3>
+            <p class="text-center text-white px-2"><em>Leave me a message!</em></p>
 
             <div class="row">
-                <div class="col-md-4 bg-dark">
-                    <p class="text-white fw-bolder"><span class="glyphicon glyphicon-map-marker"></span>Cincinnati, Ohio, US</p>
-                    <p class="text-white fw-bolder"><span class="glyphicon glyphicon-phone"></span>Phone:</p>
-                    <p class="text-white fw-bolder"><span class="glyphicon glyphicon-envelope"></span>Email: oliverjarjosa@gmail.com</p>
+                <div class="col-md-4 bg-dark my-2">
+                    <p class="text-white"><span class="glyphicon glyphicon-map-marker"></span>Location: Cincinnati, Ohio, US</p>
+                    <p class="text-white"><span class="glyphicon glyphicon-phone"></span>Phone: xxx-xxx-xxxx</p>
+                    <p class="text-white"><span class="glyphicon glyphicon-envelope"></span>Email: oliverjarjosa@gmail.com</p>
                 </div>
-                <div class="col-md-8 bg-dark">
+
+                <!--forms-->
+                <div class="col-md-8 px-4 bg-dark">
                     <div class="row">
-                        <div class="col-sm-6 form-group bg-dark">
+                        <div class="col-sm-6 form-group bg-dark my-4">
                             <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
                         </div>
-                        <div class="col-sm-6 form-group">
+                        <div class="col-sm-6 form-group my-4">
                             <input class="form-control" id="email" name="email" placeholder="Email" type="email"
                                 required>
                         </div>
