--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link text-white" href="#About">About</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="#Projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="#Work">Work</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="#Education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="#Portfolio">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="#Contact">Contact</a></li>
                 </ul>
             </div>
@@ -70,10 +72,10 @@
     <main>
         <div class="container">
             <div class="row">
-                <div class=" px-3 py-3">
+                <div id="About" class=" px-3 py-3">
                     <section class="py-3 py-xl-8 px-3">
                         <div class="container">
-                            <div id="#About" class="card bg-light">
+                            <div class="card bg-light">
                                 <h3 class="fs-6 text-secondary mb-3 mb-xl-4 text-uppercase text-black">About
                                 </h3>
 
@@ -89,10 +91,10 @@
                             </div>
                         </div>
 <!--Work & Education Sections-->
-                        <div id="work-section">
+                        <div id="Work">
                             <div class="card border-0 border-bottom border-primary shadow-sm">
                                 <div class="card-body p-4 p-xxl-5 bg-light">
-                                    <h4 class="mb-4 text-black text-center bg-light">Work</h4>
+                                    <h4 class="mb-4 text-black bg-light">Work</h4>
                                     <ul>
                                         <h3>Proscan Imaging</h3>
                                         <img id="proscan-logo"
@@ -157,7 +159,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="education-section">
+                        <div id="Education" class="section">
                             <div class="card border-0 border-bottom border-primary shadow-sm">
                                 <div class="card-body p-4 p-xxl-5 bg-light">
                                     <h4 class="mb-4 text-black">Education</h4>
@@ -247,7 +249,7 @@
         </div>-->
 
         <!-- Container (Main Portfolio Section) -->
-<div id="portfolio" class="container-fluid text-center bg-light">
+<div id="Portfolio" class="container-fluid text-center bg-light">
     <h2 class="mx-4 py-4">Portfolio</h2><br>
 
     <div class="row text-center align-items-center justify-content-center">
@@ -330,7 +332,7 @@
             </div>
         </section>-->
 <br>
-<div class="container">
+<div id="Contact" class="container">
         <div id="contact" class="container bg-dark">
             <h3 class="text-center fw-bolder text-white py-2">Contact</h3>
             <p class="text-center text-white px-2"><em>Leave me a message!</em></p>
