--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <!-- Navigation-->
-  <nav class="navbar navbar-expand-sm navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-sm navbar-expand-lg navbar-dark bg-dark fixed-top row-reverse">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="./about.html">Oliver Jarjosa</a>
+        <a class="navbar-brand float-left" href="./about.html">Oliver Jarjosa</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
@@ -41,4 +41,5 @@
     </div>
 </div>
 </body>
+
 </html>
