--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                     <div class="text">
                                         <p class="display-6 text-secondary fw-bold">Entry Level Web Developer</p>
                                         <ul id="about-list" class="block text-black mx-4 my-4">
-                                            <li>Strong foundation in HTML, CSS, Java Script & Bootstrap.</li>
+                                            <li>Strong foundation in HTML, CSS, & Java Script.</li>
                                             <li>On track to receive my Certification of Web Development from Kable
                                                 Academy.</li>
                                             <li>Passion for learning and applying the skills acquired along the way.
@@ -308,9 +308,10 @@
                                     Development course. This project
                                     consists primarily of HTML and a few lines of CSS completed within the HTML
                                     document.</p>
-                                <!-- <div class="my-2">
-                                    <button class="btn rounded-pill bg-info" type="button">See More</button>
-                                </div> -->
+                                    <div class="my-2">
+                                        <a href="https://olijarj.github.io/About-Me-Pages/"><button class="btn rounded-pill bg-info" type="button">See More</button></a>
+                                        </div> 
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -326,9 +327,10 @@
                             <p class="px-4 py-4 mx-4 my-2">The first portion of this project was to create a form to
                                 accept words that will eventually
                                 fill out a Mad Libs template. This project used both HTML and a CSS stylesheet.</p>
-                            <!-- <div class="my-2">
-                                <button class="btn rounded-pill bg-info" type="button" href="">See More</button>
-                            </div> -->
+                                <div class="my-2">
+                                    <a href="https://olijarj.github.io/Madlibs/"><button class="btn rounded-pill bg-info" type="button">See More</button></a>
+                                    </div> 
+                                </div>
                         </div>
                     </div>
 
@@ -344,9 +346,10 @@
                                 home remodeling and interior design. In this project, HTML, CSS & Bootstrap were
                                 combined to
                                 create an inviting and professional layout.</p>
-                            <!-- <div class="my-2">
-                                <button class="btn rounded-pill bg-info" type="button">See More</button>
-                            </div> -->
+                                <div class="my-2">
+                                    <a href="https://olijarj.github.io/Product-Landing-Page/"><button class="btn rounded-pill bg-info" type="button">See More</button></a>
+                                    </div> 
+                                </div>
                         </div>
                     </div>
 
@@ -362,9 +365,9 @@
                                 keyboard and the labeled buttons on the screen. With the use of JavaScript, Bootstrap,
                                 HTML &
                                 CSS, we customized the drumb kit changing the sounds and visual aspects of the page.</p>
-                            <!-- <div class="my-2">
-                                <button class="btn rounded-pill bg-info" type="button" href="">See More</button>
-                            </div> -->
+                           <div class="my-2">
+                            <a href="https://olijarj.github.io/javaScriptDrumKit/"><button class="btn rounded-pill bg-info" type="button">See More</button></a>
+                            </div> 
                         </div>
                     </div>
                 </div>
