--- a/index.html
+++ b/index.html
@@ -174,7 +174,40 @@
                                                     </div>
 
                                         </ul>
+<br>
+<!-- skills -->
+<div id="container" class="row container">
+    <div class=" bg-light py-5">
+        <h3 class="mb-4 text-secondary display-5">Skills
+        </h3>
 
+        <!-- img -->
+        <div id="containerB" class="container">
+            <div class="text">
+                <ul id="skills-list" class="block text-black mx-4 my-4">
+                    <li class="px-4 text-info"><p><i id="skills-icons" class="fa-brands fa-html5"></i></p></li>
+                    <li class="px-4 text-info"><p><i id="skills-icons" class="fa-brands fa-css3"></i></p></li>
+                    <li class="px-4 text-info"><p><i id="skills-icons" class="fa-brands fa-js"></i></p>
+                    </li>
+                    <li class="px-4 text-info"><p><i id="skills-icons" class="fa-brands fa-square-github"></i></p>
+                    </li>
+                    </li>  
+                </ul>
+            <br>
+            <div>
+                <ul id="skills-list-2" class="list">
+                    <li>Attention to detail</li>
+                    <li>Self-driven</li>
+                    <li>Time management</li>
+                    <li>Organization</li>
+                    <li>Communication</li>
+                    <li>Adherence to deadlines</li>
+                </ul>
+            </div>
+            </div>
+            <!-- <a href="#!" class="btn bsb-btn-3xl btn-primary rounded-pill mb-2 mx-2">Read more</a> -->
+        </div>
+    </div>
 
                                         <!-- <a href="#!" class="fw-bold text-decoration-none link-primary">
                                                 Learn More
