--- a/contact.html
+++ b/contact.html
@@ -7,39 +7,65 @@
     <title>Document</title>
 </head>
 <body>
-  <!-- Navigation-->
-  <nav class="navbar navbar-expand-sm navbar-expand-lg navbar-dark bg-dark fixed-top row-reverse">
-    <div class="container px-4 px-lg-5">
-        <a class="navbar-brand float-left" href="./about.html">Oliver Jarjosa</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active"><a class="nav-link text-white" href="./index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link text-white" href="./about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link text-white" href="./projectsLibrary.html">Projects</a></li>
+   <!--Navigation-->
+   <nav class="sidenav navbar navbar-expand">
+    <div class="sidenav">
+            <ul id="nav-list">
+                <li class="nav-item"><a class="nav-link" href="#About">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#./Work.html">Work</a></li>
+                <li class="nav-item"><a class="nav-link" href="./education.html">Education</a></li>
+                <li class="nav-item"><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
+                <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
             </ul>
         </div>
     </div>
+    <!-- <a class="navbar-brand d-flex fw-bold px-4" href="#">Oliver Jarjosa</a> -->
 </nav>
 
 <!--Contact-->
-    <h2>Contact</h2>
+    <h2 class="text-black">Contact</h2>
 
 <div class="container">
       <!-- forms -->
-      <div class="container">
-        <form>
-            <label for="emailExample" class="form-label">Email:</label>
-            <input type="email" class="form-control " id="exampleEmail" placeholder="youremail@gmail.com">
-        <br>
-            <label for="name" class="form-label">Name:</label>
-            <input type="name" class="form-control " id="name" placeholder="John Doe">
-        <br>
-            <label for="subject" class="form-label">Subject:</label>
-            <input type="subject" class="form-control " id="subject" style="height: 140px;" placeholder="Type here">
-        </form>
-    </div>
-</div>
+      <div id="Contact" class="container">
+        <div id="contact1" class="container my-2 mx-4">
+            <h3 class="text-center fw-bolder text-white">Contact</h3>
+            <p class="text-center text-black px-2"><em>Leave me a message!</em></p>
+
+            <div class="row mx-4 my-4 px-2 py-2">
+                <div id="contactDetails" class="col-md-3 my-2">
+                    <p class="text-black fw-bold"><i class="fa-solid fa-house-chimney fa-lg"></i> Cincinnati,
+                        Ohio,
+                        US</p>
+                    <p class="text-black fw-bold"><i class="fa-solid fa-phone fa-lg"></i> xxx-xxx-xxxx</p>
+                    <p class="text-black fw-bold mx-2"><i class="fa-solid fa-envelope fa-lg"></i>
+                        oliverjarjosa@gmail.com
+                    </p>
+                </div>
+
+                <!--forms-->
+                <div id="contact2" class="col-md-6 px-4 py-4">
+                    <div class="row">
+                        <div class="col-sm-6 form-group my-3">
+                            <input class="form-control" id="name" name="name" placeholder="Name" type="text"
+                                required>
+                        </div>
+                        <div class="col-sm-6 form-group my-3">
+                            <input class="form-control" id="email" name="email" placeholder="Email" type="email"
+                                required>
+                        </div>
+                    </div>
+
+                    <textarea class="form-control" id="comments" name="comments" placeholder="Comment"
+                        rows="5"></textarea>
+
+                    <div>
+                        <div class="col-md-12 form-group my-5 py-2">
+                            <button class="btn rounded-pill bg-info" type="submit">Send</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 </body>
 
 </html>
