--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/styles.css" rel="stylesheet" />
-    <title>Document</title>
+    <title>Contact</title>
 </head>
 <body>
    <!--Navigation-->
@@ -23,28 +23,27 @@
 </nav>
 
 <!--Contact-->
-    <h2 class="text-black">Contact</h2>
 
 <div class="container">
       <!-- forms -->
-      <div id="Contact" class="container">
-        <div id="contact1" class="container my-2 mx-4">
-            <h3 class="text-center fw-bolder text-white">Contact</h3>
-            <p class="text-center text-black px-2"><em>Leave me a message!</em></p>
+      <div id="Contact" class="card">
+        <div class="container my-2">
+            <!-- <h3 class="text-center display-4 text-white">Contact</h3> -->
+            <p class="text-center text-black py-2 display-6 fw-bold"><em>Leave me a message!</em></p>
 
-            <div class="row mx-4 my-4 px-2 py-2">
-                <div id="contactDetails" class="col-md-3 my-2">
-                    <p class="text-black fw-bold"><i class="fa-solid fa-house-chimney fa-lg"></i> Cincinnati,
+            
+                <div id="contactDetails" class="col-8">
+                    <p class="text-black"><i class="fa-solid fa-house-chimney fa-lg"></i> Cincinnati,
                         Ohio,
                         US</p>
-                    <p class="text-black fw-bold"><i class="fa-solid fa-phone fa-lg"></i> xxx-xxx-xxxx</p>
-                    <p class="text-black fw-bold mx-2"><i class="fa-solid fa-envelope fa-lg"></i>
+                    <p class="text-black"><i class="fa-solid fa-phone fa-lg"></i> xxx-xxx-xxxx</p>
+                    <p class="text-black mx-2"><i class="fa-solid fa-envelope fa-lg"></i>
                         oliverjarjosa@gmail.com
                     </p>
-                </div>
+           
 
                 <!--forms-->
-                <div id="contact2" class="col-md-6 px-4 py-4">
+                <div class="form">
                     <div class="row">
                         <div class="col-sm-6 form-group my-3">
                             <input class="form-control" id="name" name="name" placeholder="Name" type="text"
