--- a/draftportfolio.html
+++ b/draftportfolio.html
@@ -117,3 +117,67 @@
 
 </div>
 </div>
+
+
+//on hold
+
+<main>
+    <div id="Contact" class="section text-center">
+        <!-- <div class="card border-0 border-bottom border-primary shadow-sm"> -->
+        <ul class="mt-2 py-2 text-black">
+            <div class="card p-4 p-xxl-5 bg-light">
+                <h4 class="mb-4 text-secondary display-5">Education</h4>
+                <h6 class=" display-6">Certificate of Web Development</h6>
+                <h4>Kable Academy</h4>
+                <div class="panel-heading fw-bold">January 2024 - March 2024</div>
+                <img id="kable-logo" src="./img/favicon-kable-academy.webp" alt="kable academy logo">
+
+                <div class="panel-body">
+                    <ul id="list">
+                        <li>Resolved front-end issues through debugging and troubleshooting.
+                        </li>
+                        <li>Completed various projects with an emphasis on user experience and
+                            website performance.</li>
+                        <li>Capable of providing adaptive, mobile-friendly layouts for various
+                            screen sizes and resolutions.</li>
+                        <li>Comfortable working with HTML, CSS, Bootstrap, and other popular
+                            frameworks to produce a functional, appealing product.</li>
+                    </ul>
+                </div>
+                <br>
+                <hr>
+                <br>
+
+                <ul class="mt-2 py-2 text-black">
+                    <h6 class=" display-6">BA of Psychology</h6>
+                    <h4 id="school-title">University of Cincinnati</h4>
+                    <div class="panel-heading fw-bold">September 2019 - December 2021</div>
+                    <img id="uc-logo"
+                        src="./img/Cincinnati-Bearcats-Logo.png"
+                        alt="">
+
+                   
+                        <ul id="list">
+                            <li class="text-center"><p><b>Honor roll:</b></p>
+                                <p> 2019 - 2021</p></li>
+                        </ul>
+                    
+                   <br>
+
+                    <h6 class=" display-6">High School Diploma</h6>
+                    <h4 id="school-title">Oldfields School</h4>
+                    <div class="panel-heading fw-bold my-4">May 2013 - June 2016</div>
+                    <img id="os-logo"
+                        src="./img/os-logo.jpg"
+                        alt="Oldfields School logo">
+
+                    <div class="panel-body">
+                        <ul id="list">
+                            <li><b>Honor Roll:</b> 2015 - 2016</li>
+                            <li><b>Merit Roll:</b> 2013 - 2015</li>
+                            <li><b>Student organizer of the Community Service Commity.</b></li>
+                        </ul>
+                    </div>
+
+
+</main>
