--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
     <nav class="sidenav navbar navbar-expand">
         <div class="sidenav">
             <ul id="nav-list">
-                <li class="nav-item"><a class="nav-link" href="./about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="./Work.html">Work</a></li>
                 <li class="nav-item"><a class="nav-link" href="./education.html">Education</a></li>
                 <li class="nav-item"><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
@@ -68,7 +68,7 @@
                         <div class="container">
                             <div class="my-2 justify-content-center">
                                 <a href="https://olijarj.github.io/Madlibs/"><button
-                                        class="btn rounded-pill bg-warning my-2" type="button">See More</button></a>
+                                        class="btn rounded-pill my-2" type="button">See More</button></a>
                             </div>
                         </div>
                     </div>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="container">
                         <div class="my-2 justify-content-center">
-                            <a href="https://olijarj.github.io/Madlibs/"><button class="btn rounded-pill bg-warning my-2"
+                            <a href="https://olijarj.github.io/Madlibs/"><button class="btn rounded-pill my-2"
                                     type="button">See More</button></a>
                         </div>
                     </div>
@@ -135,7 +135,7 @@
                         <div class="container">
                             <div class="my-2 justify-content-center">
                                 <a href="https://olijarj.github.io/Madlibs/"><button
-                                        class="btn rounded-pill bg-info my-2" type="button">See More</button></a>
+                                        class="btn rounded-pill my-2" type="button">See More</button></a>
                             </div>
                         </div>
                     </div>
@@ -168,7 +168,7 @@
                     </div>
                     <div class="container">
                         <div class="my-2 justify-content-center">
-                            <a href="https://olijarj.github.io/Madlibs/"><button class="btn rounded-pill bg-info my-2"
+                            <a href="https://olijarj.github.io/Madlibs/"><button class="btn rounded-pill my-2"
                                     type="button">See More</button></a>
                         </div>
                     </div>
@@ -202,7 +202,7 @@
                         <div class="container">
                             <div class="my-2 justify-content-center">
                                 <a href="https://olijarj.github.io/Madlibs/"><button
-                                        class="btn rounded-pill bg-info my-2" type="button">See More</button></a>
+                                        class="btn rounded-pill my-2" type="button">See More</button></a>
                             </div>
                         </div>
                     </div>
@@ -235,7 +235,7 @@
                     </div>
                     <div class="container">
                         <div class="my-2 justify-content-center">
-                            <a href="https://olijarj.github.io/Madlibs/"><button class="btn rounded-pill bg-info my-2"
+                            <a href="https://olijarj.github.io/Madlibs/"><button class="btn rounded-pill my-2"
                                     type="button">See More</button></a>
                         </div>
                     </div>
@@ -269,7 +269,7 @@
                         <div class="container">
                             <div class="my-2 justify-content-center">
                                 <a href="https://olijarj.github.io/Madlibs/"><button
-                                        class="btn rounded-pill bg-info my-2" type="button">See More</button></a>
+                                        class="btn rounded-pill my-2" type="button">See More</button></a>
                             </div>
                         </div>
                     </div>
@@ -302,7 +302,7 @@
                     </div>
                     <div class="container">
                         <div class="my-2 justify-content-center">
-                            <a href="https://olijarj.github.io/Madlibs/"><button class="btn rounded-pill bg-info my-2"
+                            <a href="https://olijarj.github.io/Madlibs/"><button class="btn rounded-pill my-2"
                                     type="button">See More</button></a>
                         </div>
                     </div>
